--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "homepage": "https://github.com/zangyuechao100/mp-node#readme",
   "devDependencies": {
     "axios": "^0.19.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.15",
-    "require-directory": "^2.1.1"
+    "require-directory": "^2.1.1",
+    "validator": "^11.1.0"
   }
 }
