--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.15",
+    "mysql2": "^1.6.5",
     "require-directory": "^2.1.1",
+    "sequelize": "^5.12.3",
     "validator": "^11.1.0"
   }
 }
