--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/zangyuechao100/mp-node#readme",
   "devDependencies": {
     "axios": "^0.19.0",
+    "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
